docs(git): Remote > COURS

--- a/__docs/cours/E02.md
+++ b/__docs/cours/E02.md
@@ -37,3 +37,39 @@
   - POST /lists
   - PATCH /lists/:id
   - DELETE /lists
+
+## Git flow
+
+- ajouter un `remote` nommé `correction` (à côté du remote de base qui est `origin`)
+  
+    ```bash
+    git remote add correction git@github.com:O-clock-Muffin/S06-okanban-api-BLUE-FabienTavernier.git
+    ```
+
+- on met à jour la branche `master` pour qu'elle suive celle du repo `correction` :
+
+    ```bash
+    git pull correction master --allow-unrelated-histories --no-edit -X theirs
+    ```
+
+  - `--allow-unrelated-histories` :
+    permet le pull de commits qui viennent d'un autre repo
+
+  - `--no-edit` :
+    évite de demander de ré-écrire le message du commit en ouvrant VIM ou nano
+
+  - `-X theirs` :
+    en cas de conflit (parce que par erreur j'ai _commit_ des choses
+    sur `master` qui sont antagonistes avec ce qu'à fait le formateur),
+    on garde la version du formateur
+
+- chaque jour, on crée une nouvelle branche pour faire l'atelier ;  
+  ex : `git switch -c jour2`
+
+- on travaille sur cette branche puis on _push_ en faisant :
+  `git push origin jour2`
+
+    > ON NE TRAVAILLE PAS SUR `MASTER`/`MAIN`
+
+- pour la suite, on fera un `git pull correction master` pour récupérer les énoncés
+  et corrections
