docs: SUPPORT CORRECTION

--- a/__docs/cours/E02.md
+++ b/__docs/cours/E02.md
@@ -73,3 +73,147 @@
 
 - pour la suite, on fera un `git pull correction master` pour récupérer les énoncés
   et corrections
+
+## Correction
+
+> créer et coder sur une branche `correction-jour1` (à _merge_ en fin de matinée → PR)
+
+### _User stories_
+
+→ voir `__docs/ressources/conception/user-stories.md`
+
+### MCD
+
+→ voir `__docs/ressources/conception/mcd/`
+
+### Wireframe
+
+→ voir `__docs/ressources/conception/wireframe/`
+
+### Base de données
+
+> [PostgreSQL](__docs/ressources/bdd/postgres_commands.md)
+
+```bash
+sudo -i -u postgres psql
+```
+
+```SQL
+CREATE USER okanban WITH PASSWORD 'okanban';
+CREATE DATABASE okanban OWNER okanban;
+```
+
+## C'est notre projet
+
+### Initialiser le projet
+
+#### PNPM
+
+> `NPM`, `Yarn`, `PNPM` ?
+
+On aura des dépendances, on initialise PNPM  
+→ `pnpm init`
+
+Type : **module** → on va travailler avec des ESM !
+
+Dépendances :
+
+- `dotenv`
+- `pg`
+- `sequelize`
+
+#### Variables d'environnement
+
+`.env` (faire aussi le `.env.example`)
+
+```text
+DB_HOST=localhost
+DB_NAME=database
+DB_USER=user
+DB_PWD=secret
+DB_DRIVER=postgres
+```
+
+ou
+
+```text
+PG_URL=postgres://<user>:<password>@<host>/<database>
+```
+
+#### Git
+
+Git :
+
+- `.gitignore` pour les modules (`node_modules`) et le `.env`
+
+#### ESLint
+
+Configuration avec prise ne charge des ESM
+
+```json
+{
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module"
+  },
+  "extends": "eslint:recommended",
+  "rules": {
+    "indent": ["error", 2],
+    "semi": ["error", "always"]
+  },
+  "ignorePatterns": ["**/dist"]
+}
+```
+
+### Client Sequelize
+
+On va se connecter à la BDD  
+→ voir `src/sequelize-client.js`
+
+On peut tester la connexion  
+→ `sandbox/db_cnx_test.js`
+
+### _Model_ Liste
+
+→ voir `src/models/list.model.js`
+
+#### Et les _timestamps_ ?
+
+On n'oublie de rajouter les « timestamps » (`created_at` et `updated_at`).
+
+« Ça coûte pas grand chose » et ça peut nous servir à plein de choses :
+
+- trier les cartes par dte de création
+- savoir depuis combien de temps la carte X possède le label « urgent »  
+  → ouverture vers potentielle fonctionnalité d'alerte
+- …
+
+Dans Sequelize ?  
+Tout est automatique !  
+→ <https://sequelize.org/docs/v6/core-concepts/model-basics/#timestamps>
+
+### Synchronisation
+
+→ voir `src/migrations/01.createTables.js`
+
+### Échantillonnage
+
+→ voir `src/migrations/02.seedTables.js`
+
+On peut tester la récupération des listes  
+→ `sandbox/db_lists_test.js`
+
+> au lieu de lancer les fichiers à la main,
+> on peut créer des scripts PNPM :
+>
+> ```json
+> "db:create": "node ./src/migrations/01.createTables.js",
+> "db:seed": "node ./src/migrations/02.seedTables.js"
+> "db:reset": "pnpm db:create && pnpm db:seed",
+> ```
+
