--- a/__docs/cours/E02.md
+++ b/__docs/cours/E02.md
@@ -217,3 +217,101 @@ On peut tester la récupération des listes
 > "db:reset": "pnpm db:create && pnpm db:seed",
 > ```
 
+## COURS
+
+### REST API
+
+> <https://www.restapitutorial.com/lessons/whatisrest.html>  
+> <https://fr.wikipedia.org/wiki/Representational_state_transfer>
+
+_Representational State Transfer_ (REST) désigne un groupe de contraintes (6)
+concernant l'architecture logicielle destiné à apporter aux systèmes
+efficacité, fiabilité et scalabilité.  
+Un système est appelé _RESTful_ lorsqu'il adhère à ces contraintes.
+
+#### Interface uniforme
+
+Elle simplifie et découple l'architecture,
+ce qui permet à chaque composant d'évoluer indépendamment. 4 principes, dont :
+
+Une Rest API est basée sur des **ressources** caractérisées par :
+
+- des noms (nos entités ! – `list`, `card`, `tag`)
+- identifiées par des
+  [URIs](https://selvi48zenith.files.wordpress.com/2021/09/the-illustration-of-the-url-urn-and-uri-26.png)
+  (_Uniform Resource Identifier_)
+
+Exemple :
+
+- `http://localhost:3000/lists`
+- `http://localhost:3000/lists/42`
+
+Plusieurs URIs peuvent faire référence à la même ressource pour différents types
+d'opérations, on les distingue alors grâce aux [verbes HTTP](../ressources/routes/http_verbs.md)
+(`GET`, `POST`, `DELETE`…).
+
+> Les SOAP API, elles, se basent sur des actions et sont caractérisées par des verbes.
+> Elle se basent sur des paramètres de requêtes et non sur des URIs
+>
+> ```js
+> request_headers = {"content-type": "text/xml"}
+> request_body =  "<?xml version=\"1.0\"?>"
+> request_body += "<soap:Envelope xmlns:soap=\"http://www.w3.org/2003/05/soap-envelope\">"
+> request_body += "<soap:Header></soap:Header>"
+> request_body += "<soap:Body>"
+> request_body += "<m:GetBook>"
+> request_body += "<m:BookId>123</m:BookId>"
+> request_body += "</m:GetBook>"
+> request_body += "</soap:Body>"
+> request_body += "</soap:Envelope>"
+> response = requests.post(
+>   "http://www.example.com/exampleapi",
+>   data=request_body,
+>   headers=request_headers
+> )
+> ```
+
+#### Client–serveur
+
+Les responsabilités sont séparées entre le client et le serveur.  
+Exemple : le client n'est pas concerné par le stockage des données.
+
+#### Sans état
+
+Deux appels sont indépendants :
+la communication client–serveur s'effectue sans conservation de l'état
+de la session de communication sur le serveur entre deux requêtes successives.
+L'état de la session est conservé par le client et transmis à chaque nouvelle requête.
+
+#### Avec mise en cache
+
+Les réponses peuvent être mises en cache.
+
+#### En couche
+
+Un client ne peut habituellement pas dire s'il est connecté
+directement au serveur final ou à un serveur intermédiaire.  
+Les serveurs intermédiaires peuvent améliorer l'extensibilité du système
+en mettant en place une répartition de charge et un cache partagé.
+Ils peuvent aussi renforcer les politiques de sécurité.
+
+#### Avec un code à la demande (optionnel)
+
+Les serveurs peuvent temporairement étendre ou modifier les fonctionnalités
+d'un client en lui transférant du code exécutable (scripts JS par ex.).
+
+#### En bref
+
+Une API REST, c'est un ensemble de routes :
+
+- `GET https://mon-api.com/cards` : obtenir toutes les cartes de l'application
+- `POST https://mon-api.com/cards` : ajouter une carte
+- `PUT https://mon-api.com/cards/3` : modifier la carte 3
+- `GET https://mon-api.com/lists/5/cards` : obtenir les cartes de la liste 5
+
+> voir la [documentation de l'API Spotify](https://developer.spotify.com/documentation/web-api)
+> ou celle de [JSON Placeholder](https://jsonplaceholder.typicode.com/)
+
+### Liste de nos routes
+
+→ voir `specifications/api-base-endpoints.md`
